[package]
name = "rivven-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Object storage connectors for Rivven Connect (S3, GCS, Azure Blob, MinIO, HDFS)"
keywords = ["rivven", "streaming", "s3", "gcs", "azure", "minio", "object-storage"]
categories = ["database", "asynchronous"]

[features]
default = []
# Individual cloud providers
s3 = ["dep:aws-sdk-s3", "dep:aws-config"]
gcs = ["dep:google-cloud-storage"]
azure = ["dep:azure_storage", "dep:azure_storage_blobs"]
# Output formats
parquet = ["dep:parquet", "dep:arrow-array", "dep:arrow-schema"]
# Enable all providers
full = ["s3", "gcs", "azure", "parquet"]

[dependencies]
rivven-connect = { workspace = true }

# Core
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }

# Validation (must match rivven-connect)
validator = { version = "0.20", features = ["derive"] }
schemars = "0.8"

# Secrets
secrecy = { version = "0.8", features = ["serde"] }

# Compression
flate2 = "1"

# AWS S3 (optional)
aws-sdk-s3 = { version = "1.65", optional = true }
aws-config = { version = "1.5", features = ["behavior-version-latest"], optional = true }

# Google Cloud Storage (optional)
google-cloud-storage = { version = "0.22", optional = true }

# Azure Blob Storage (optional)
azure_storage = { version = "0.21", optional = true }
azure_storage_blobs = { version = "0.21", optional = true }

# Apache Parquet (optional)
parquet = { version = "54", optional = true }
arrow-array = { version = "54", optional = true }
arrow-schema = { version = "54", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[package.metadata.docs.rs]
all-features = true
