[package]
name = "rivven-warehouse"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Data warehouse connectors for Rivven Connect (Snowflake, BigQuery, Redshift)"
keywords = ["rivven", "streaming", "snowflake", "bigquery", "redshift"]
categories = ["database", "asynchronous"]

[features]
default = []
# Individual warehouse providers
snowflake = ["dep:reqwest", "dep:rsa", "dep:base64", "dep:jsonwebtoken"]
bigquery = ["dep:gcp-bigquery-client", "dep:google-cloud-auth"]
redshift = ["dep:tokio-postgres", "dep:tokio-postgres-rustls", "dep:rustls", "dep:webpki-roots", "dep:aws-config", "dep:aws-sdk-redshift", "dep:aws-credential-types"]
# Enable all providers
full = ["snowflake", "bigquery", "redshift"]

[dependencies]
rivven-connect = { workspace = true }

# Core
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }

# Validation
validator = { version = "0.20", features = ["derive"] }
schemars = "0.8"

# Secrets
secrecy = { version = "0.8", features = ["serde"] }

# Snowflake dependencies (optional)
reqwest = { version = "0.11", features = ["json"], optional = true }
rsa = { version = "0.9", optional = true }
base64 = { version = "0.22", optional = true }
jsonwebtoken = { version = "9", optional = true }

# BigQuery dependencies (optional)
gcp-bigquery-client = { version = "0.25", optional = true }
google-cloud-auth = { version = "0.17", optional = true }

# Redshift dependencies (optional) - uses rustls for musl cross-compilation
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"], optional = true }
tokio-postgres-rustls = { version = "0.12", optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"], optional = true }
webpki-roots = { version = "0.26", optional = true }
aws-config = { version = "1", optional = true }
aws-sdk-redshift = { version = "1", optional = true }
aws-credential-types = { version = "1", features = ["hardcoded-credentials"], optional = true }

[dev-dependencies]
tokio-test = "0.4"

[package.metadata.docs.rs]
all-features = true
