[package]
name = "rivven"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance distributed event streaming platform"
readme = "README.md"
keywords = ["streaming", "kafka", "event-driven", "distributed", "messaging"]
categories = ["asynchronous", "network-programming"]

[features]
default = ["client"]
client = ["dep:rivven-client"]
full = ["client", "rivven-core/default"]

[dependencies]
rivven-core = { path = "../rivven-core", default-features = false }
rivven-client = { path = "../rivven-client", optional = true }
