[package]
name = "rivven"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for Rivven event streaming platform"

[[bin]]
name = "rivven"
path = "src/main.rs"

[dependencies]
rivven-client = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
ctrlc = "3.4"
