[package]
name = "rivven-cdc-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

# Standalone project, not part of workspace
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.0", features = ["derive"] }
bytes = "1"
serde_json = "1"

[dependencies.rivven-cdc]
path = ".."
features = ["full"]

[[bin]]
name = "fuzz_pgoutput_decoder"
path = "fuzz_targets/fuzz_pgoutput_decoder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_mysql_binlog_decoder"
path = "fuzz_targets/fuzz_mysql_binlog_decoder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_validator"
path = "fuzz_targets/fuzz_validator.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_sql_injection"
path = "fuzz_targets/fuzz_sql_injection.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_cdc_event"
path = "fuzz_targets/fuzz_cdc_event.rs"
test = false
doc = false
bench = false
