[package]
name = "rivven-server-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

# Standalone project, not part of workspace
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.0", features = ["derive"] }
bytes = "1"
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }

[dependencies.rivven-server]
path = ".."

[dependencies.rivven-core]
path = "../../rivven-core"

[[bin]]
name = "fuzz_protocol_request"
path = "fuzz_targets/fuzz_protocol_request.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_protocol_response"
path = "fuzz_targets/fuzz_protocol_response.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_postcard_deserialize"
path = "fuzz_targets/fuzz_postcard_deserialize.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_sasl_auth"
path = "fuzz_targets/fuzz_sasl_auth.rs"
test = false
doc = false
bench = false
